--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head>
     </head>
     <body>
-    <script src="colorme.js"></script>
+    <script src="lib/colorme.js"></script>
     </body>
 </html>
